--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-DISCORD_TOKEN=
+DISCORD_TOKEN=MTM0OTcxMjM2NTAwMzg3MDIwOA.GR7c7y.Nf3gwjhOAEPRrBzflIyxreWvUmkDMGri0cNS9k
 MONGO_TOKEN=
 GIPHY_TOKEN=
 WEBHOOK_ID=
 WEBHOOK_TOKEN=
-DISCORD_ID=
+DISCORD_ID=757189691047936100
 
 # Not neccessary variables
 # Wondering how to get these? Check out https://github.com/CorwinDev/Discord-Bot#requirements
